--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@electron-forge/plugin-fuses": "^7.9.0",
     "@electron-forge/plugin-webpack": "^7.9.0",
     "@electron/fuses": "^1.8.0",
+    "@types/better-sqlite3": "^7.6.13",
+    "@types/node": "^24.6.1",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -48,8 +50,11 @@
   "dependencies": {
     "@mantine/core": "^8.3.2",
     "@mantine/hooks": "^8.3.2",
+    "better-sqlite3": "^12.4.1",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.27"
   }
 }
