--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "@mantine/core": "^8.3.2",
     "@mantine/hooks": "^8.3.2",
+    "@tabler/icons-react": "^3.35.0",
     "better-sqlite3": "^12.4.1",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^19.1.1",
