--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "electron-squirrel-startup": "^1.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.3",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.27"
   }
