--- a/package.json
+++ b/package.json
@@ -50,7 +50,13 @@
   "dependencies": {
     "@mantine/core": "^8.3.2",
     "@mantine/hooks": "^8.3.2",
+    "@mantine/tiptap": "^8.3.3",
     "@tabler/icons-react": "^3.35.0",
+    "@tiptap/extension-link": "^3.6.5",
+    "@tiptap/extension-placeholder": "^3.6.5",
+    "@tiptap/extension-underline": "^3.6.5",
+    "@tiptap/react": "^3.6.5",
+    "@tiptap/starter-kit": "^3.6.5",
     "better-sqlite3": "^12.4.1",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^19.1.1",
