Add event timestamp tracking with occurredAt and endedAt fields
Entries can now track when events actually occurred, separate from creation time. Posts can also have an optional end time to represent time ranges.

- Add occurredAt (required) and endedAt (nullable, posts only) columns to Entry entity
- Add database CHECK constraints: endedAt > occurredAt, comments cannot have endedAt
- Add DateTimePicker controls in EntryComposer and EditableEntry
- Add validation logic in WorkspaceManager and UI components
- Change feed sorting from createdAt to occurredAt
- Display timestamps as ranges when endedAt is present

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@mantine/core": "^8.3.2",
+    "@mantine/dates": "^8.3.3",
     "@mantine/hooks": "^8.3.2",
     "@mantine/tiptap": "^8.3.3",
     "@tabler/icons-react": "^3.35.0",
@@ -58,6 +59,7 @@
     "@tiptap/react": "^3.6.5",
     "@tiptap/starter-kit": "^3.6.5",
     "better-sqlite3": "^12.4.1",
+    "dayjs": "^1.11.18",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
