--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "migration:generate": "typeorm-ts-node-commonjs migration:generate -d src/main/space/typeorm-cli.config.ts",
+    "migration:create": "typeorm-ts-node-commonjs migration:create",
+    "migration:run": "typeorm-ts-node-commonjs migration:run -d src/main/space/typeorm-cli.config.ts",
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/main/space/typeorm-cli.config.ts"
   },
   "keywords": [],
   "author": {
@@ -27,6 +31,7 @@
     "@electron-forge/plugin-fuses": "^7.9.0",
     "@electron-forge/plugin-webpack": "^7.9.0",
     "@electron/fuses": "^1.8.0",
+    "@electron/rebuild": "^4.0.1",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.6.1",
     "@types/react": "^19.1.16",
@@ -45,6 +50,7 @@
     "postcss-simple-vars": "^7.0.1",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.4",
+    "ts-node": "^10.9.2",
     "typescript": "~4.5.4"
   },
   "dependencies": {
