--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@electron/fuses": "^1.8.0",
     "@electron/rebuild": "^4.0.1",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/marked": "^5.0.2",
     "@types/node": "^24.6.1",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
@@ -70,6 +71,7 @@
     "better-sqlite3": "^12.4.1",
     "dayjs": "^1.11.18",
     "electron-squirrel-startup": "^1.0.1",
+    "marked": "^16.4.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
