--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@mantine/tiptap": "^8.3.3",
     "@tabler/icons-react": "^3.35.0",
     "@tiptap/extension-link": "^3.6.5",
+    "@tiptap/extension-mention": "^3.6.6",
     "@tiptap/extension-placeholder": "^3.6.5",
     "@tiptap/extension-underline": "^3.6.5",
     "@tiptap/react": "^3.6.5",
@@ -76,6 +77,7 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3",
     "reflect-metadata": "^0.2.2",
+    "tippy.js": "^6.3.7",
     "typeorm": "^0.3.27"
   }
 }
