Add Playwright E2E testing setup
Initialize Playwright testing with isolated test environment:
- Test mode via CLI args (--test-space-path, --user-data-dir)
- Pre-migrated snapshot system for fast test startup
- Automatic cleanup of test spaces after each run
- Smoke test verifies app launches successfully

Run with: npm test (headless) or npm run test:headed (visible)

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,8 @@ out/
 
 # Dev database for migrations
 .dev/
+
+# Test artifacts
+test-results/
+playwright-report/
+tests/fixtures/snapshot-space/
