--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,43 @@ on:
       - main
 
 jobs:
+  test:
+    runs-on: windows-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Prepare test snapshot
+        run: npm run test:create-snapshot
+
+      - name: Rebuild native modules
+        run: npx electron-rebuild
+
+      - name: Build Electron bundle
+        run: npm run package
+
+      - name: Run tests
+        run: npm test
+
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+
   build-windows:
+    needs: test
     runs-on: windows-latest
 
     steps:
@@ -32,6 +68,7 @@ jobs:
           path: out/make/squirrel.windows/**/*
 
   build-macos:
+    needs: test
     runs-on: macos-latest
 
     steps:
@@ -57,6 +94,7 @@ jobs:
           path: out/make/**/*.dmg
 
   build-linux:
+    needs: test
     runs-on: ubuntu-latest
 
     steps:
